tests/error/modifier_errors/power_no_arg.err
Error: Not enough arguments (at $FILE:7:14)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with power():
  |               ^^ Missing argument (expected 1, got 0)

Guppy compilation failed due to 1 previous error
